update: index style

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         </div>
         <div class="header-tabs">
             <a class="tab">inicio</a>
-            <a class="tab">ambientes</a>
-            <a class="tab">comunidade</a>
+            <a class="tab">amb.</a>
+            <a class="tab">comun.</a>
+            <a class="tab">respon.</a>
         </div>
     </header>
     <section class="main-section">
