--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Auteasy</title>
 </head>
@@ -14,14 +14,14 @@
         <div class="header-content">
             <div class="header-logo">
                 <span>Auteasy</span>
-                <img src="autism.png" alt="" srcset="">
+                <img src="resources/images/autism.png" alt="" srcset="">
             </div>
         </div>
         <div class="header-tabs">
-            <a class="tab">inicio</a>
-            <a class="tab">amb.</a>
-            <a class="tab">comun.</a>
-            <a class="tab">respon.</a>
+            <a class="tab" href="static/index.html">inicio</a>
+            <a class="tab" href="static/ambientes.html">amb.</a>
+            <a class="tab" href="static/comunidade.html">comun.</a>
+            <a class="tab" href="static/responsavel.html">respon.</a>
         </div>
     </header>
     <section class="main-section">
@@ -49,7 +49,7 @@
         </div>
     </article>
     <footer class="main-footer">
-        <p>Projeto desenvolvido com o intuito de ajudar, meu!</p>
+        <p>Projeto desenvolvido com carinho e empatia.</p>
         <span class="bold">3ºAN Ciência da Computação, Extensionista III</span>
         <div class="instituicoes">
             <div class="autores">
@@ -67,9 +67,9 @@
                     <li>Fernanda Talhati</li>
                 </ul>
             </div>
-            <img src="logo.png" alt="" srcset="">
+            <img src="resources/images/logo.png" alt="" srcset="">
             <div class="mogi">
-                <img src="bandeira-mogi.jpg" alt="">
+                <img src="resources/images/bandeira-mogi.jpg" alt="">
                 <div style="display:flex;flex-direction:column">
                     <span>Cidade de</span>
                     <span>Mogi das Cruzes</span>
@@ -77,130 +77,25 @@
             </div>
         </div>
     </footer>
-
-    <script>
-        const motivos = {
-            "missao":"Garantir que as pessoas de Mogi das Cruzes tenham acesso democratizado a informações relacionadas a TEA",
-            "visao":"Se tornar um site referencia nisso aqui.",
-            "valores":"Respeito, inclusao, acessibilidade, inovacao"
-        }
-
-        btnNext = document.getElementById("btn-next");
-        btnPrevious = document.getElementById("btn-previous");
-        textContent = document.getElementById("text-content");
-        maTitle = document.getElementById("ma-title");
-        maIcon = document.getElementById("ma-icon");
-        item1 = document.getElementById("item-1");
-        item2 = document.getElementById("item-2");
-        item3 = document.getElementById("item-3");
-
-        current = 0;
-        previous = 2;
-        function changeTextNext() {
-            switch (current) {
-                case 0:
-                    textContent.innerText = motivos.missao
-                    maTitle.innerText = "Missão"
-                    maIcon.classList = "fa fa-flag"
-                    item3.style = ""
-                    item3.classList = ""
-                    item1.style.backgroundColor = "green"
-                    item1.classList = "tab-up"
-                    current = 1
-                    previous = 0
-                    break
-                case 1: 
-                    textContent.innerText = motivos.visao
-                    maTitle.innerText = "Visão"
-                    maIcon.classList = "fa fa-dot-circle-o"
-                    item1.style = ""
-                    item1.classList = ""
-                    item2.style.backgroundColor = "red"
-                    item2.classList = "tab-up"
-                    current = 2
-                    previous = 1
-                    break
-                case 2: 
-                    textContent.innerText = motivos.valores
-
-                    maTitle.innerText = "Valores"
-                    maIcon.classList = "fa fa-globe"
-                    item2.style = ""
-                    item2.classList = ""
-                    item3.style.backgroundColor = "teal"
-                    item3.classList = "tab-up"
-                    current = 0
-                    previous = 2
-                    break
-            }
-        }
-
-        function changeTextPrevious() {
-            switch (previous) {
-                case 0:
-                    textContent.innerText = motivos.valores
-                    maTitle.innerText = "Valores"
-                    maIcon.classList = "fa fa-globe"
-                    item1.style = ""
-                    item1.classList = ""
-                    item3.style.backgroundColor = "teal"
-                    item3.classList = "tab-up"
-                    current = 0
-                    previous = 2
-                    break
-                case 1: 
-                    textContent.innerText = motivos.missao
-                    maTitle.innerText = "Missão"
-                    maIcon.classList = "fa fa-flag"
-                    item2.style = ""
-                    item2.classList = ""
-                    item1.style.backgroundColor = "green"
-                    item1.classList = "tab-up"
-                    current = 1
-                    previous = 0
-                    break
-                case 2: 
-                    textContent.innerText = motivos.visao
-                    maTitle.innerText = "Visão"
-                    maIcon.classList = "fa fa-dot-circle-o"
-                    item3.style = ""
-                    item3.classList = ""
-                    item2.style.backgroundColor = "red"
-                    item2.classList = "tab-up"
-                    current = 2
-                    previous = 1
-                    break
-            }
-        }
-
-        btnNext.addEventListener("click", () => {
-            changeTextNext();
-            btnNext.childNodes[0].classList.remove("next")
-            setTimeout(() => {
-                btnNext.childNodes[0].classList.add("next")
-            }, 0)
-        })
-        btnPrevious.addEventListener("click", () => {
-            changeTextPrevious();
-            btnPrevious.childNodes[0].classList.remove("previous")
-            setTimeout(() => {
-                btnPrevious.childNodes[0].classList.add("previous")
-            }, 0)
-        })
-
-        window.onload = () => {
-            changeTextNext();
-        };
-    </script>
+    <script src="resources/js/index.js"></script>
 </body>
-<img src="./diversidade.png" alt="" 
+<img id="bg-image" src="resources/images/diversidade.png" alt="" 
     style="
         position: absolute; 
-        width: 360px; 
+        width: 100px; 
         top: 120px;
         z-index: -700;
         opacity: 0.4;
     ">
+<script>
+    bgImage = document.getElementById("bg-image")
+    window.addEventListener("load", () => {
+        bgImage.style.width = window.innerWidth+"px";
+        if(bgImage.width > 600){
+            bgImage.style.width = "600px";
+        }
+    })
+</script>
 </html>
 
 <!-- 
