--- a/static/ambientes.html
+++ b/static/ambientes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/resources/css/ambientes-style.css">
+    <link rel="stylesheet" href="../resources/css/ambientes-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Auteasy</title>
 </head>
@@ -14,14 +14,14 @@
         <div class="header-content">
             <div class="header-logo">
                 <span>Auteasy</span>
-                <img src="/resources/images/autism.png" alt="" srcset="">
+                <img src="../resources/images/autism.png" alt="" srcset="">
             </div>
         </div>
         <div class="header-tabs">
-            <a class="tab" href="/static/index.html">inicio</a>
-            <a class="tab" href="/static/ambientes.html">amb.</a>
-            <a class="tab" href="/static/comunidade.html">comun.</a>
-            <a class="tab" href="/static/responsavel.html">respon.</a>
+            <a class="tab" href="../static/index.html">inicio</a>
+            <a class="tab" href="../static/ambientes.html">amb.</a>
+            <a class="tab" href="../static/comunidade.html">comun.</a>
+            <a class="tab" href="../static/responsavel.html">respon.</a>
         </div>
     </header>
     <article class="main-article">
@@ -62,9 +62,9 @@
                     <li>Fernanda Talhati</li>
                 </ul>
             </div>
-            <img src="/resources/images/logo.png" alt="" srcset="">
+            <img src="../resources/images/logo.png" alt="" srcset="">
             <div class="mogi">
-                <img src="/resources/images/bandeira-mogi.jpg" alt="">
+                <img src="../resources/images/bandeira-mogi.jpg" alt="">
                 <div style="display:flex;flex-direction:column">
                     <span>Cidade de</span>
                     <span>Mogi das Cruzes</span>
@@ -72,7 +72,7 @@
             </div>
         </div>
     </footer>
-    <script src="/resources/js/ambientes.js"></script>
+    <script src="../resources/js/ambientes.js"></script>
 </body>
 
 </html>
