--- a/static/comunidade.html
+++ b/static/comunidade.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="header-tabs">
-            <a class="tab" href="../static/index.html">inicio</a>
+            <a class="tab" href="/index.html">inicio</a>
             <a class="tab" href="../static/ambientes.html">amb.</a>
             <a class="tab" href="../static/comunidade.html">comun.</a>
             <a class="tab" href="../static/responsavel.html">respon.</a>
